# c_snippets

./: README.md  julia_to_pict.rs
julia_fractal/: CMakeLists.txt  julia.sh  julia_to_pict.cpp  main.c
